@@ -1614,13 +1614,15 @@ new Test.Unit.Runner({
       return element;
     };
 
+    // test elements with various positions and displays
     ['hide', 'show'].each(function(method) {
       [$w('absolute relative'), $w('relative absolute'),
        $w('relative relative'), $w('absolute absolute')]
        .each(function(positions) {
-         var target = $('clone_position_target_' + positions[0]),
-          source = $('clone_position_source_' + positions[1]);
+         var targID = 'clone_position_target_' + positions[0],
+          srcID = 'clone_position_source_' + positions[1];
 
+         var target = $(targID), source = $(srcID);
          target[method]();
          target.clonePosition(source, {  
            offsetTop: 25,
@@ -1631,53 +1633,74 @@ new Test.Unit.Runner({
          targOffset[0] -= 35;
          targOffset[1] -= 25;
 
-         this.assertEnumEqual(source.cumulativeOffset(), targOffset);
+         this.assertEnumEqual(source.cumulativeOffset(), targOffset,
+           'target: ' + targID +'; source: ' + srcID);
+         
+         // required because clonePosition won't work 
+         // on elements hidden by parents
          target.show();
        }, this);
     }, this);
 
+    // test Element#clonePosition setHeight and setWidth
     var targets = $w('target_absolute target_relative'),
      sources = $w('source_absolute source_relative');
+
     targets.each(function(targID) {
-      var target = $('clone_position_' + targID);
+      targID = 'clone_position_' + targID;
+      var target = $(targID);
       sources.each(function(srcID) {
-        var source = $('clone_position_' + srcID);
+        srcID = 'clone_position_' + srcID;
+        var source = $(srcID);
         source.setStyle({ 'height': '50px', 'width': '80px' });
 
         target.clonePosition(source);
-        this.assertHashEqual(source.getDimensions(), target.getDimensions());
+        this.assertHashEqual(source.getDimensions(), target.getDimensions(),
+          'target: ' + targID +'; source: ' + srcID);
       }, this);
     }, this);
 
-    targets = $w('lvl1_abs lvl1_rel lvl1_abs_lvl2_abs lvl1_abs_lvl2_rel lvl1_rel_lvl2_abs lvl1_rel_lvl2_rel');
+    // test nested elements with various positions and displays
+    var source = window.$('clone_position_nested');
+    targets = $w('lvl1_abs lvl1_rel lvl1_abs_lvl2_abs lvl1_abs_lvl2_rel ' +
+      'lvl1_rel_lvl2_abs lvl1_rel_lvl2_rel').map(function(id) {
+      return 'clone_position_nested_' + id;
+    });
+
     ['hide', 'show'].each(function(method) {
       ['relative', 'absolute'].each(function(position) {
         targets.each(function(id) {
           var source = $('clone_position_nested');
           source.style.position = position;
 
-          var target = $('clone_position_nested_' + id);
+          var target = $(id);
           target[method]();
           target.clonePosition(source);
 
-          this.assertEnumEqual(source.cumulativeOffset(), target.cumulativeOffset());
+          this.assertEnumEqual(source.cumulativeOffset(), target.cumulativeOffset(), id);
+
+          // required because clonePosition won't work
+          // on elements hidden by parents
           target.show();
         }, this);
       }, this);
     }, this);
 
-    var source = window.$('clone_position_nested');
-    source.setStyle({ 'height': '40px', 'width': '70px' });
+    // test Element#clonePosition setHeight and setWidth on nested elements
+    source.setStyle({ 'width': '70px','height': '40px' });
     var srcDims = source.getDimensions();
+    if (!Fuse.Browser.Bug('ELEMENT_STYLE_OVERFLOW_VISIBLE_EXPANDS_TO_FIT_CONTENT')) {
+      targets.each(function(id, index) {
+        var target = window.$(id);
+        target.clonePosition(source);
+        target.style.left = ((index + 1) * 100) + 'px';
 
-    targets.each(function(id, index) {
-      var target = window.$('clone_position_nested_' + id);
-      target.clonePosition(source);
-      target.style.left = ((index + 1) * 100) + 'px';
-      this.assertHashEqual(srcDims, target.getDimensions());
-    }, this);
+        this.assertHashEqual(srcDims, target.getDimensions(), id);
+      }, this);
+    }
+    else source.hide(); // hide on buggy browsers like IE6
   },
-  
+
   testDOMAttributesHavePrecedenceOverExtendedElementMethods: function() {
     this.assertNothingRaised(function() { $('dom_attribute_precedence').down('form') });
     this.assertEqual($('dom_attribute_precedence').down('input'), $('dom_attribute_precedence').down('form').update);
