@@ -1,3 +1,5 @@
+* Cleanup Feature/Bug tests and correct Element#clonePosition unit test for IE 6. [jddalton]
+
 * Rename Element#visible to Element#isVisible. [jddalton]
   Note: Backwards compatibility warning.
 
